Adding test styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,8 @@
-#app {
-  background: red !important;
-  font-size: 90px;
+html {
+  color: #fff;
+  background: #3d3d3d !important;
+
+  a {
+    color: #fff
+  }
 }
