--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,1 @@
-html {
-  color: #fff;
-  background: #3d3d3d !important;
-
-  a {
-    color: #fff
-  }
-}
+@import '../../node_modules/bulma/bulma.sass';
