Updating bulma reference

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/bulma/bulma.sass';
+@import '~bulma/bulma.sass';
 
 .move-enter-active, .move-leave-active {
   transform: translateX(0);
